--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -144,6 +144,7 @@ Thus, a major problem with entering repeated measures data in the one row per pe
 | 3) Dependent variable (*elapsed_time*) is not  indicated    | |
 | 4) Unclear that *elapsed_time* is the measurement in each month column | |
 
+\newpage
 
 Fortunately, the problems with Table \@ref(tab:withinex) can be largely resolved by converting the data to the a tidy data format. This can be done with the pivot_long() command that we will learn about later in this chapter. Thus, we can enter the data in the format of Table \@ref(tab:withinex) and later convert it to a tidy data format. After this conversion the data will be appear as in Table \@ref(tab:withintidyex). For elapsed_time variable this data is now in the tidy data format. Each row corresponds to a single elapsed_time observed. Each column corresponds to a single variable. Somewhat problematically, however, sex is repeated three times for each person (i.e., over the three rows) - and this can be confusing. However, if the focus in on analyzing elapsed time this tidy data format makes sense. Importantly, there is an id column for each participant so R knows that this information is repeated for each participant and is not confused by repeating the sex designation over three rows. In directly, this illustrates the importance of having an id column to indicate each unique participant.
 
